--- a/_static/css/custom.css
+++ b/_static/css/custom.css
@@ -26,7 +26,9 @@
     opacity: 0.5;
     border-radius: 0px;
     width: 30%;
+    border: none
 }
+
 
 .sd-card-img {
     opacity: 0.5;
@@ -39,30 +41,23 @@
     background-color: #f3f4f7;
 }
 
+
 .sd-card:after {
-  display:block;
-  opacity: 1;
-  content: '';
-  background-color: #fff;
-  border: none;
-  border-bottom: solid 1px #ee4c2c;
-  transform: scaleX(0);
-  transition: transform .250s ease-in-out;
+    display: block;
+    opacity: 1;
+    content: '';
+    border-bottom: solid 1px #ee4c2c;  
+    background-color: #fff;
+    transform: scaleX(0);  
+    transition: transform .250s ease-in-out;
+    transform-origin:  0% 50%;
 }
 
 .sd-card:hover {
-  background-color: #fff;
-  opacity: 1;
-  border: none;
-  border-bottom: solid 1px #ee4c2c;
-  transition: transform .250s ease-in-out;
+    background-color: #fff;
+    opacity: 1;
 }
 
 .sd-card:hover:after {
-    border: none;
     transform: scaleX(1);
-}
-
-.sd-card:after {
-    transform-origin: 0% 50%; 
 }
