--- a/_static/css/custom.css
+++ b/_static/css/custom.css
@@ -56,6 +56,9 @@
 .sd-card:hover {
     background-color: #fff;
     opacity: 1;
+    border-top: 1px solid #f3f4f7;
+    border-left: 1px solid #f3f4f7;
+    border-right: 1px solid #f3f4f7;
 }
 
 .sd-card:hover:after {
